objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>End Date from Strikedeck for Bulk Push</inlineHelpText>
        <label>Contract End Date(from SD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_date_Custom_Field__c</fullName>
        <formula>DATE (
      
    YEAR (  Contract_End_Date__c  ) - FLOOR(  ContractTerm   / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1),
 
    
    IF (MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) &gt; 0, MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12), MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) + 12),
 
     
    MIN (DAY ( Contract_End_Date__c ), 
        CASE (
   
       
   IF (MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) &gt; 0, MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12), MONTH ( Contract_End_Date__c ) - MOD ( ContractTerm , 12) + 12), 9, 30, 4, 30, 6, 30, 11, 30, 2, 
   
    
   IF (MOD (YEAR ( Contract_End_Date__c ) - FLOOR( ContractTerm / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1), 400) = 0 || (MOD (YEAR ( Contract_End_Date__c ) - FLOOR( ContractTerm / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1) ,4) = 0 &amp;&amp; MOD (YEAR ( Contract_End_Date__c ) - FLOOR( ContractTerm / 12) - IF (MONTH ( Contract_End_Date__c ) - MOD( ContractTerm , 12) &gt; 0, 0, 1) ,100) &lt;&gt; 0 ), 29, 28), 31)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start date(Custom Field)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Seats_Vault__c</fullName>
        <label># of Seats Vault (from SD)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_AR_Subs_Closed_Won__c</fullName>
        <label>Total # of AR Subs Closed Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Seats_CI_CD__c</fullName>
        <label># of Seats CI/CD (from SD)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Account_ID__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Contract_Start_date_Custom_Field__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>CONTRACT_TERM</columns>
        <columns>Opportunity__c</columns>
        <columns>Total_AR_Subs_Closed_Won__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>